# cookiecutter-rust

./: .gitignore  LICENSE  README.md  cookiecutter.json
{{cookiecutter.repo_name}}/: AUTHORS.md  CHANGELOG.md  Cargo.toml  README.md
{{cookiecutter.repo_name}}/.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
{{cookiecutter.repo_name}}/.github/workflows/: build.yml  release.yml
{{cookiecutter.repo_name}}/src/: lib.rs  main.rs  tests.rs
{{cookiecutter.repo_name}}/tests/: integration_test.rs
